--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "A website for a local restaurant",
   "main": "index.html",
   "scripts": {
-    "dev": "parcel index.html",
-    "build": "parcel build index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel src/index.html",
+    "build": "parcel build index.html"
   },
   "author": "Omar Arriaga-Reyes",
   "license": "ISC",
   "devDependencies": {
-    "jasmine": "^3.5.0"
+    "jasmine": "^3.5.0",
+    "sass": "^1.26.10"
   }
 }
