--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "hacienda",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A website for a local restaurant",
-  "main": "index.html",
+  "main": "src/index.html",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build src/index.html"
   },
   "author": "Omar Arriaga-Reyes",
   "license": "ISC",
